force-app/main/default/objects/NV_Contacts__c/NV_Contacts__c.object-meta.xml
<CustomObject>
    <description>NPN : Contains NV Contacts shown to NPN Partner Users/Community users based on their Program/Competency/Region/Account</description>
    <label>NV Contact</label>
    <nameField>
        <label>NV Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NV Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>