force-app/main/default/objects/NV_Contacts__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NV_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>