force-app/main/default/objects/NV_Contacts__c/fields/Marketing_Manager_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager_Contact_Number__c</fullName>
    <label>Marketing Manager Contact Number</label>
    <type>Phone</type>
</CustomField>