force-app/main/default/objects/NV_Contacts__c/fields/Marketing_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager_Email__c</fullName>
    <label>Marketing Manager Email</label>
    <type>Email</type>
</CustomField>