force-app/main/default/objects/NV_Contacts__c/fields/Marketing_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager_Name__c</fullName>
    <label>Marketing Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>