force-app/main/default/objects/NV_Contacts__c/fields/Marketing_Title__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Title__c</fullName>
    <inlineHelpText>This title is for marketing manager</inlineHelpText>
    <label>Marketing Title</label>
    <type>TextArea</type>
</CustomField>