force-app/main/default/objects/NV_Contacts__c/fields/Other_States__c.field-meta.xml
<CustomField>
    <fullName>Other_States__c</fullName>
    <label>Other States/Territory</label>
    <length>40</length>
    <type>Text</type>
</CustomField>