force-app/main/default/objects/NV_Contacts__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>NVEP</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>