force-app/main/default/objects/NV_Contacts__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cloud Service Provider</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Federal Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Global Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Inception Partner</fullName>
            </value>
            <value>
                <fullName>Industry Focus</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Service Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Solution Advisor</fullName>
            </value>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
            <value>
                <fullName>Solutions Integration Partner</fullName>
            </value>
            <value>
                <fullName>Tegra Embedded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>