force-app/main/default/objects/NV_Contacts__c/fields/ProgramType_Competency_Concatenation__c.field-meta.xml
<CustomField>
    <fullName>ProgramType_Competency_Concatenation__c</fullName>
    <formula>TEXT(Program_Type__c) + TEXT(Sub_Program__c) + TEXT(Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProgramType Competency Concatenation</label>
    <type>Text</type>
</CustomField>