force-app/main/default/objects/NV_Contacts__c/fields/Sales_Manager_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Contact_Number__c</fullName>
    <label>Sales Manager Contact Number</label>
    <type>Phone</type>
</CustomField>