force-app/main/default/objects/NV_Contacts__c/fields/Sales_Title__c.field-meta.xml
<CustomField>
    <fullName>Sales_Title__c</fullName>
    <inlineHelpText>This titile is for sales manager.</inlineHelpText>
    <label>Sales Title</label>
    <type>TextArea</type>
</CustomField>