force-app/main/default/objects/NV_Contacts__c/fields/Sub_Program__c.field-meta.xml
<CustomField>
    <fullName>Sub_Program__c</fullName>
    <label>Sub Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Data Center Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>