force-app/main/default/objects/NV_Contacts__c/fields/Support_Manager_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Manager_Contact_Number__c</fullName>
    <label>Support Manager Contact Number</label>
    <type>Phone</type>
</CustomField>