force-app/main/default/objects/NV_Contacts__c/fields/Support_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Manager_Email__c</fullName>
    <label>Support Manager Email</label>
    <type>Email</type>
</CustomField>