force-app/main/default/objects/NV_Contacts__c/fields/Support_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Manager_Name__c</fullName>
    <label>Support Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>