force-app/main/default/objects/NV_Contacts__c/fields/Support_Title__c.field-meta.xml
<CustomField>
    <fullName>Support_Title__c</fullName>
    <inlineHelpText>This title is for support manager</inlineHelpText>
    <label>Support Title</label>
    <type>TextArea</type>
</CustomField>