force-app/main/default/objects/NV_Contacts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Sub_Program__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>US_States__c</columns>
    <columns>Other_States__c</columns>
    <columns>Account_Owner_Name__c</columns>
    <columns>Sales_Manager_Name__c</columns>
    <columns>Marketing_Manager_Name__c</columns>
    <columns>Support_Manager_Name__c</columns>
    <columns>Region__c</columns>
    <columns>Sub_Region__c</columns>
    <columns>ProgramType_Competency_Concatenation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>